# clipass

./: Cargo.toml  README.md  TODO.md
src/: clipass.rs  command.rs  crypto.rs  error.rs  lib.rs  main.rs  utils.rs  vault.rs
src/vault/: mod.rs  vault.rs  vault_header.rs
tests/: command_test.rs  utils_test.rs  vault_test.rs
