[package]
name = "clipass"
version = "0.2.0-alpha"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8" # Pour générer le sel (salt) et le nonce
rpassword = "7.4"
zeroize = { version = "1.8", features = ["derive"] }
chrono = "0.4.42"
num-traits = "0.2"


[dev-dependencies]
tempfile = "3"